--- a/about.html
+++ b/about.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             color: #333;
-            background: #f4f4f4;
+            background-color: #f4f4f4;
         }
         header {
-            background: linear-gradient(to right, #003366, #00509E);
+            background: rgba(0, 51, 102, 0.9);
             color: white;
             text-align: center;
-            padding: 1.5rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .motto {
             font-size: 18px;
             font-weight: bold;
             margin-top: 5px;
-            font-style: italic;
-            color: #ffdd57;
         }
         nav ul {
             list-style: none;
@@ -42,44 +42,34 @@
         nav ul li a {
             text-decoration: none;
             color: white;
-            background: #ff8c00;
+            background: #00509E;
             padding: 10px 15px;
             border-radius: 5px;
             font-size: 16px;
-            transition: 0.3s ease-in-out;
         }
         nav ul li a:hover {
-            background: #ff6600;
-            transform: scale(1.05);
+            background: #002D5E;
         }
         .about {
             max-width: 900px;
-            margin: 30px auto;
-            padding: 25px;
+            margin: 20px auto;
+            padding: 20px;
             background: white;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
-        .about h2 {
+        h2 {
             color: #003366;
-            border-bottom: 3px solid #00509E;
-            display: inline-block;
-            padding-bottom: 5px;
         }
-        .about p {
-            line-height: 1.8;
-            font-size: 17px;
+        p {
+            line-height: 1.6;
         }
         footer {
             background: #003366;
             color: white;
             text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-            font-size: 14px;
-            font-weight: bold;
-            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
+            padding: 10px;
+            margin-top: 20px;
         }
         @media (max-width: 768px) {
             nav ul {
@@ -88,7 +78,7 @@
                 gap: 10px;
             }
             .about {
-                padding: 20px;
+                padding: 15px;
             }
         }
     </style>
