--- a/admissions.html
+++ b/admissions.html
@@ -33,11 +33,11 @@
             font-size: 16px;
             padding: 8px 15px;
             border-radius: 5px;
-            background: #ff8c00;
+            background: #001f3f; /* Dark Navy Blue */
             transition: 0.3s ease-in-out;
         }
         .nav a:hover {
-            background: #ff6600;
+            background: #003366; /* Lighter Navy Blue */
             transform: scale(1.05);
         }
 
@@ -95,7 +95,7 @@
             width: 100%;
             text-align: center;
             padding: 15px;
-            background: #00509E;
+            background: #001f3f; /* Dark Navy Blue */
             color: white;
             text-decoration: none;
             font-size: 18px;
@@ -105,7 +105,7 @@
             transition: 0.3s ease-in-out;
         }
         .cta-button:hover {
-            background: #003366;
+            background: #003366; /* Slightly Lighter Navy Blue */
             transform: scale(1.05);
         }
 
